# pyg

./: .gitignore  .pylintrc  README.md  makefile  mypy.ini  pyproject.toml  requirements.txt  setup.py
examples/: cubes.py  simple_drawing.py  teapot.py
examples/complex_scene/: main.py
examples/simple_game/: ascii_arts.py  main.py
examples/simple_game/game_objects/: __init__.py  asteroid.py  black_hole.py  game_object.py  planet.py  spaceship.py  star.py
examples/textures/: main.py
examples/wavefront_objects/: main.py
pyg/: __init__.py  defaults.py  drawer.py  events.py  light.py  texture.py  transformation_handler.py  utils.py  window.py
pyg/cameras/: __init__.py  camera.py  simple_camera.py
pyg/enums/: events.py  fill_mode.py  primitive_shape.py
pyg/objects/: __init__.py  circle.py  cube.py  dot.py  graphic_object.py  line.py  rectangle.py  simple_graphic_object.py  texturized_object.py  triangle.py
