[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pyg"
version = "0.0.1"
author = "Gabriel Nogueira (Talendar)"
license = {file = "LICENSE"}
description = "A simple graphics library for Python built on top of OpenGL and GLFW."
requires-python = ">=3.9"
dependencies = [
    "numpy~=1.22.3",
    "PyOpenGL~=3.1.6",
    "PyOpenGL-accelerate~=3.1.5",
    "glfw~=2.5.1",
]
readme = "README.md"
